# freesat-channellist

./: .gitignore  CMakeLists.txt  freesat.cpp
